--- a/ppc.html
+++ b/ppc.html
@@ -4,13 +4,77 @@
     <meta charset="UTF-8">
     <title>PPC Lubricants</title>
     <meta name="description" content="PPC Lubricants">
-    <link rel="stylesheet" href="assets/css/ppc.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/ppc.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
   </head>
   <body>
-    <div id="header">header</div>
+    <div id="header">
+      <img src="assets/images/logo.png" alt="logo">
+      <p>CALL TOLL FREE 1-800-772-5823</p>
+      <ul>
+        <li><a href="">HOME</a></li>
+        <li><a href="">MARKET SEGMENTS</a></li>
+        <li><a href="">SERVICES</a></li>
+        <li><a href="">PRODUCTS</a></li>
+        <li><a href="">PROMOTIONS</a></li>
+        <li><a href="">MARKET AREA</a></li>
+        <li><a href="">MARKET INFORMATION</a></li>
+      </ul>
+    </div>
     <div id="content">
-      <img src="" alt="">
+      <div class="main"></div>
+      <div id="about">
+        <span id="about-heading">ABOUT PPC LUBRICANTS</span>
+        <span>A Heritage of Specialing in Lubricants</span>
+        <p>
+          For over 40 years, PPC Lubricants has earned a solid reputation for offering high quality products and services that improve your business. How? By providing customer retention programs/products for Installers and products and services that increase equipment life and enhance the efficiency of all eqiopment whether it be 
+          <span class="bold">Automotive, Heavy Duty Commerical, or Industrial</span> 
+          in its application
+        </p>
+        <p>
+          At 
+          <span>PPC Lubricants</span>
+          , we take tremendous pride in providing the highest level of Service. When you call our toll free numbers you will be greeted by a staff that is knowledgable and experienced in the various lubricants that we carry. EAch customer service representative receives industry specific trainging on the latest advancements in the 
+          <span>lubrication technology</span> including changing equipment and OEM requirements.
+        </p>
+      </div>
+      <div class="logo"></div>
+      <p class="bulk-fill">PPC now has Bulk Delivery/Squirt Fill capabilities for DEF</p>
 
+      <div id="bottom">
+        <div class="bottom-info">
+          <p class="info-heading">AUTOMOTIVE</p>
+          <img src="assets/images/automotive.png" alt="Automotive" class="info-image">
+          <p class="info-description">
+            The Automotive Market requires a different set of tools in order to succeed. PPC Lubricants offers various programs that are customized to each customer in... 
+          </p>
+          <input type="image" src="assets/images/submit.png" alt="Read More">
+        </div>
+        <div class="bottom-info">
+          <p class="info-heading">COMMERCIAL</p>
+          <img src="assets/images/commercial.png" alt="Commerical" class="info-image">
+          <p class="info-description">
+            PPC Lubricants has been in business of supporting the Commercial in market for over 40 years! The most iportant thing that we have learned is that...
+          </p>
+          <input type="image" src="assets/images/submit.png" alt="Read More">
+        </div>
+        <div class="bottom-info">
+          <p class="info-heading">INDUSTRIAL</p>
+          <img src="assets/images/industrial.png" alt="industrial" class="info-image">
+          <p class="info-description">
+            Regardless of the industrial market segement that you operate in: Metal, Forestry, Gas or Power Production, Foods, Plastics or almost any other field, your lubricant...
+          </p>
+          <input type="image" src="assets/images/submit.png" alt="Read More">
+        </div>
+        <div class="bottom-info">
+          <p class="info-heading">DIESEL EXHAUST FLUID</p>
+          <img src="assets/images/diesel.png" class="info-image" alt="Diesel">
+          <p class="info-description">
+            As governmental regulations on emissions from diesel engines become more severe, it has force vehicel manufacturers to evaluate and adopt new technologies in order to...
+          </p>
+          <input type="image" src="assets/images/submit.png" alt="Read More">
+        </div>
+      </div>
     </div>
   </body>
 </html>
