Refactored CSS with Less

--- a/ppc.html
+++ b/ppc.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>PPC Lubricants</title>
     <meta name="description" content="PPC Lubricants">
-    <link rel="stylesheet" type="text/css" href="assets/css/ppc.css">
+    <link rel="stylesheet/less" type="text/css" href="assets/css/ppc.less">
     <link rel="stylesheet" type="text/css" href="normalize.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.2.0/less.min.js"></script>
   </head>
   <body>
     <div id="header">
